--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "wp --mode production && serve dist"
+    "build": "wp --mode production && serve dist",
+    "watch": "nodemon --watch webpack.*.js --exec \"npm start\"",
+    "start": "wp --mode development"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "mini-html-webpack-plugin": "^3.1.3",
     "serve": "^11.3.2",
     "webpack": "^5.21.1",
-    "webpack-nano": "^1.1.1"
+    "webpack-nano": "^1.1.1",
+    "webpack-plugin-serve": "^1.2.1"
   }
 }
