--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "css-loader": "^5.0.2",
     "mini-html-webpack-plugin": "^3.1.3",
     "serve": "^11.3.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.21.1",
+    "webpack-merge": "^5.7.3",
     "webpack-nano": "^1.1.1",
     "webpack-plugin-serve": "^1.2.1"
   }
