--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^1.3.6",
     "mini-html-webpack-plugin": "^3.1.3",
     "serve": "^11.3.2",
     "style-loader": "^2.0.0",
